--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,6 +25,7 @@ body {
   padding-top: 30px;
   padding-left: 20px;
   padding-right: 20px;
+  
 }
 
 header {
@@ -39,13 +40,13 @@ header {
   background-color: hsl(0, 0%, 100%);
   border-radius: 5px;
   border-width: 1px;
-  box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px 0px;
-  color: hsl(206, 17%, 28%);
+  box-shadow: 5px 5px 8px 5px rgba(0,0,0,0.8);
+  color: hsl(206, 17%, 28%);  
   font-size: 18px;
   margin: 0 auto;
-  max-width: 800px;
+  max-width: 40%;
   padding: 30px 40px;
-  opacity:0.85;
+  opacity:0.87;
 }
 
 .card-header::after {
@@ -119,7 +120,7 @@ button[disabled] {
   padding-left: 15px;
   padding-right: 15px;
   padding-bottom: 85px;
-  font-size: 1.2rem;
+  font-size: 1.4rem;
   text-align: center;
   margin-top: 10px;
   margin-bottom: 10px;
@@ -127,6 +128,7 @@ button[disabled] {
   border-radius: 6px;
   resize: none;
   overflow: hidden;
+ 
 }
 
 @media (max-width: 690px) {
