--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,12 +53,13 @@ header {
   content: " ";
   display: block;
   width: 100%;
-  background: #e7e9eb;
+  background: #4f9ce9;
   height: 2px;
 }
 
 .card-body {
   min-height: 100px;
+  
 }
 
 .card-footer {
@@ -69,7 +70,7 @@ header {
   content: " ";
   display: block;
   width: 100%;
-  background: #e7e9eb;
+  background: #4f9ce9;;
   height: 2px;
 }
 
@@ -80,8 +81,8 @@ header {
 }
 
 .btn {
-  border: none;
-  background-color: hsl(360, 91%, 36%);
+  border: 5px solid black;
+  background-color: #1a48e1;;
   border-radius: 25px;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 6px 0px rgba(0, 0, 0, 0.2) 0px 1px 1px
     0px;
@@ -100,11 +101,25 @@ button[disabled] {
   background: #c0c7cf;
 }
 
+/*Displays the user selection boxes*/
 .user_option {
 
   display: block;
 }
+/*Increase the size of the password length box*/
+input.larger {
+  
+  font-size: 20px;
+}
+/**Increase the size of the checkboxes*/
+input.lowercase,
+input.uppercase,
+input.numbers,
+input.symbols {
+width: 20px;
+height: 20px;
 
+}
 .float-right {
   float: right;
 }
@@ -124,10 +139,11 @@ button[disabled] {
   text-align: center;
   margin-top: 10px;
   margin-bottom: 10px;
-  border: 2px dashed #c0c7cf;
+  border: 2px dashed #1a48e1;
   border-radius: 6px;
   resize: none;
   overflow: hidden;
+  font-weight: bolder;
  
 }
 
